5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4192/executions/1667_2323.log
== SUBMITION (2019-04-16 16:26:51) 
-- CODE:
nome = input("nome do bruxo: sirius e malfoy")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.130245
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 2
    if == "sirius".upper():
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:17) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.199442
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 2
    if == "sirius".upper():
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:01) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY")")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.129939
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 1
    nome = input()")
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:05) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY")")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.125381
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 1
    nome = input()")
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:06) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY")")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.180896
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 1
    nome = input()")
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:06) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY")")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.271405
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 1
    nome = input()")
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:06) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY")")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.127029
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2323/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:23) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.211962
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 2
    if == "sirius".upper():
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:25) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.243565
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 2
    if == "sirius".upper():
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:25) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.118825
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 2
    if == "sirius".upper():
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:26) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- ERROR:
File "XXXX", line 2
    if == "sirius".upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:14) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome =="sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.146648
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:17) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.146956
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:19) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.349
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.189471
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:13) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.147279
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:16) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.142874
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:17) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.190562
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:18) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- ERROR:
File "XXXX", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:19) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.09551
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:33:07) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.148441
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:33:11) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.138344
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:33:32) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.160444
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:33:34) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY"))
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
		esp = 7.674
		tem = 3.789
	vel = esp / tem 
	print(vel)
-- EXECUTION TIME:
0.153756
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 1
    nome = input())
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:31) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
	esp = 7.674
	tem = 3.789
	vel = esp / tem 
print(vel)
-- EXECUTION TIME:
0.123009
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:37) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
	esp = 7.674
	tem = 3.789
	vel = esp / tem 
print(vel)
-- EXECUTION TIME:
0.226412
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:43) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper():
	esp = 7.674
	tem = 3.789
vel = esp / tem 
print(vel)
-- EXECUTION TIME:
0.182064
-- ERROR:
  File "/home/codebench/codes/1667/2323/main.py", line 6
    nome == "malfoy".upper():
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:36:42) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789
vel = esp / tem
print(vel)
-- EXECUTION TIME:
0.132627
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:13) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	es = 15.7654
	te = 1.3479
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789
vel = esp / tem
print(vel)
-- EXECUTION TIME:
0.180494
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:24) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789
vel = esp / tem
print(vel)
-- EXECUTION TIME:
0.116286
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:20) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789
vel = esp / tem
print(vel)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:30) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789
vel = esp / tem
print(vel)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:52:51) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789
vel = esp / tem
print(vel)
-- EXECUTION TIME:
0.217469
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:56) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789
vel = esp / tem
print(vel)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:06) 
-- CODE:
nome = input("nome do bruxo: SIRIUS/MALFOY)")
if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789
vel = esp / tem
print(vel)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
